2023-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* man/AffineSwaption.Rd: Add missing `\code` before stray `{}`
	* man/BermudanSwaption.Rd: Ditto
	* man/SabrSwaption.Rd: Ditto

2023-09-20  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml (jobs): Update to actions/checkout@v4

2023-08-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.19
	* configure.ac: Idem
	* configure: Idem

	* man/AffineSwaption.Rd: Add \dontrun{} to example
	* man/BermudanSwaption.Rd: Idem
	* man/Bond.Rd: Idem
	* man/DiscountCurve.Rd: Idem
	* man/EuropeanOptionArrays.Rd: Idem

	* src/Makevars.win: Remove useful-but-verboten compiler option to
	silence overly verbose output due to Boost headers

2023-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Update configure checks
	* configure: Idem

2023-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* inst/tinytest/test_schedule.R: Adjust three tests for QuantLib 1.31

	* README.md: Mention qlcal, remove note about RcppQuantuccia

2023-06-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add r-universe badge

2023-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml: Update actions to current version

2023-05-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New release 0.4.18

	* src/utils.cpp: Use Rcpp::stop instead of throw

2023-04-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

2023-04-28  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Refactor and simplify for current use
	* tools/winlibs.R: Update to QuantLib 1.29 download

2023-04-27  Jeroen Ooms  <jeroenooms@gmail.com>

	* configure.ac: Update build to fetch arm|x86_64 macOS artifacts
	* configure: Idem
	* .github/workflows/ci.yam: Re-enable macOS tests
	* inst/tinytest/test_dates.R: Skip one test file on macOS
